Fixed figure images and captions getting misaligned

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,7 @@ img {
 
 figure {
     margin: 0 auto;
+    text-align: center;
 }
 figure figcaption {
     font-size: 0.875rem;
